# FindYourPhone

./: adsaModel.ipynb
Backend/: package-lock.json  package.json  seed.js
Backend/src/: app.js  constant.js  index.js
Backend/src/configs/: axios.config.js
Backend/src/controllers/: phoneRecommedation.controller.js
Backend/src/db/: index.js
Backend/src/models/: phones.model.js
Backend/src/routes/: phones.route.js
Backend/src/services/: model.service.js
Backend/src/utils/: asynchandler.js  decodeBase64.js
Design/: home.html  landing.html  question.html  result.html
dataset/laptop_dataset/: laptopPrice_test.csv  laptopPrice_train.csv
dataset/phones_dataset/: phones_test.csv  phones_train.csv
fastapi_app/: main.py  pyproject.toml
notebook/: featureBasedLaptopRecom.ipynb  featureBasedRecommender.ipynb  imageBasedRecommender.ipynb
questions/: phonequestions.js
scripts/: HighestAndLowestPrice.py  Top10HighestPrices.py
smart_find_frontend/: index.html  package-lock.json  package.json
smart_find_frontend/src/: App.jsx  Layout.jsx
smart_find_frontend/src/axios/: axios.config.js
smart_find_frontend/src/components/: ProductDetails.jsx  Question.jsx  Ranking.jsx  RankingCard.jsx  ScrollToTop.jsx
smart_find_frontend/src/pages/: Home.jsx  Landing.jsx  QuestionForPhoneAndLaptop.jsx  Result.jsx
