[project]
name = "fastapi-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "python-multipart>=0.0.27",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.46.0",
]
